--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,6 @@
-langauge: java
+language: java
+sudo: required
+jdk:
+  - oraclejdk8
+script:
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
