--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    
+
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
         <name>swp</name>
@@ -45,11 +45,29 @@
         </plugins>
     </build>
 
-
     <dependencies>
-    
-        <!-- MigLayout -->
+        <dependency>
+            <groupId>com.j256.ormlite</groupId>
+            <artifactId>ormlite-android</artifactId>
+            <version>5.0</version>
+        </dependency>
 
+        <dependency>
+            <!-- https://mvnrepository.com/artifact/com.j256.ormlite/ormlite-android -->
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <!-- MigLayout -->
         <dependency>
             <groupId>com.miglayout</groupId>
             <artifactId>miglayout-javafx</artifactId>
@@ -57,7 +75,6 @@
         </dependency>
 
         <!-- Apache Commons -->
-
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
@@ -65,7 +82,6 @@
         </dependency>
 
         <!-- Logging  -->
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -88,5 +104,4 @@
         </dependency>
 
     </dependencies>
-
 </project>
